// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field table 1x1 with empty cell 1`] = `
<table>
  <tbody>
    <tr>
      <td
        id="id1-1"
        onClick={[Function]}
      >
        [ ] 1, 1
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Field table 1x1 with filled cell 1`] = `
<table>
  <tbody>
    <tr>
      <td
        id="id1-1"
        onClick={[Function]}
      >
        [X] 1, 1
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Field table 3x4 with different cells 1`] = `
<table>
  <tbody>
    <tr>
      <td
        id="id1-1"
        onClick={[Function]}
      >
        [X] 1, 1
      </td>
      <td
        id="id2-1"
        onClick={[Function]}
      >
        [ ] 2, 1
      </td>
      <td
        id="id3-1"
        onClick={[Function]}
      >
        [ ] 3, 1
      </td>
    </tr>
    <tr>
      <td
        id="id1-2"
        onClick={[Function]}
      >
        [ ] 1, 2
      </td>
      <td
        id="id2-2"
        onClick={[Function]}
      >
        [X] 2, 2
      </td>
      <td
        id="id3-2"
        onClick={[Function]}
      >
        [ ] 3, 2
      </td>
    </tr>
    <tr>
      <td
        id="id1-3"
        onClick={[Function]}
      >
        [ ] 1, 3
      </td>
      <td
        id="id2-3"
        onClick={[Function]}
      >
        [ ] 2, 3
      </td>
      <td
        id="id3-3"
        onClick={[Function]}
      >
        [ ] 3, 3
      </td>
    </tr>
    <tr>
      <td
        id="id1-4"
        onClick={[Function]}
      >
        [ ] 1, 4
      </td>
      <td
        id="id2-4"
        onClick={[Function]}
      >
        [ ] 2, 4
      </td>
      <td
        id="id3-4"
        onClick={[Function]}
      >
        [X] 3, 4
      </td>
    </tr>
  </tbody>
</table>
`;
